--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.standardWidthList{
+  width:400px;
+}
+.mat-button-focus-overlay {
+  background-color:transparent;
+}
+button:focus {
+  outline: none;
+  border: 0;
+}
