--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 rel="stylesheet">
-<div class="container" id="mainContener">
-  <app-orderlist></app-orderlist>
+<div id="mainContener">
+  <router-outlet></router-outlet>
 </div>
