--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,8 @@
 #mainContener{
-  margin-top: 50px;
-  background-color: #414244;
-  padding: 50px;
+  /*margin-top: 50px;*/
+  /*background-color: #414244;*/
+  /*padding: 50px;*/
+  /*width: 50%;*/
+  margin-left: 10%;
+  margin-right: 10%;
 }
