--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,70 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-.standardWidthList{
-  width:400px;
+body {
+  font-family: Roboto, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
 }
+
+.standardWidthList {
+  width: 400px;
+}
+
 .mat-button-focus-overlay {
-  background-color:transparent;
+  background-color: transparent;
 }
+
+.mat-error{
+  font-size: 12px;
+}
+
 button:focus {
   outline: none;
   border: 0;
+}
+
+.pull-right {
+  float: right;
+}
+.pull-left {
+  float: left;
+}
+.full-width {
+  width: 90% !important;
+}
+
+mat-card-title {
+  font-size: 30px !important;
+  max-width: 380px;
+}
+
+.close-button {
+  position: absolute !important;
+  z-index: 300;
+  right: 0;
+  top: 0;
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px; /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
 }
